# koradar

./: .gitignore  Cargo.toml  Makefile  README.md  TESTING_MACOS.md
core/: Cargo.toml
core/src/: cfg.rs  db.rs  disasm.rs  il.rs  lib.rs  loader.rs  protocol.rs
examples/vuln_stack/: exploit.py  vuln.c
frontend/: Cargo.toml  index.html  style.css
frontend/src/: main.rs
scripts/: check_docker_setup.sh  check_setup.sh  create_test_binary.sh  setup_qemu.sh  setup_qemu_docker.sh  test_rebuild.sh  trace_docker.sh
server/: Cargo.toml
server/src/: ai.rs  main.rs
tracer/: Cargo.toml
tracer/src/: lib.rs
