[package]
name = "koradar-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.56"
futures = "0.3.31"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Event", "EventTarget"] }

